sua lan 1 about.html

--- a/about.html
+++ b/about.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>viet nhat dep trai nhat the gioi</h1>
-    <h2>tao la nhat</h2>
-    <h2>su lan sjaf</h2>
+    <h1>tao dep zaiiiiii</h1>
   </body>
 </html>
